fix(table): Only target IE for the vertical alignment fix #BQ-6022

--- a/src/app/modules/list/table.component.scss
+++ b/src/app/modules/list/table.component.scss
@@ -2,13 +2,15 @@
 
 :host ::ng-deep {
 
-  // The rule below is used to fix vertical alignment issues in IE.
-  // It is not required for the other browsers, but it doesn't break them.
-  // should be removed when support for IE is dropped.
-  mat-cell,
-  mat-header-cell,
-  mat-footer-cell {
-    min-height: 0;
+  // IE ONLY
+  // The rule below is used to fix vertical alignment issues, due to a flexbox bug in IE.
+  // Can be removed when support for IE is dropped.
+  @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) { // sass-lint:disable-line no-vendor-prefixes
+    mat-cell,
+    mat-header-cell,
+    mat-footer-cell {
+      min-height: 0;
+    }
   }
 
   .mat-row {
